# python-web-login

./: .gitignore  README.md  pyproject.toml
config/: config.py
data/: messages.py
fixtures/: setup.py
helpers/: selenium_helpers.py
pages/: inventory_page.py  login_page.py
tests/: login_tests.py  logout_tests.py
